update resources + multiple invoice information

--- a/attendance-booking/attendance-booking.page.html
+++ b/attendance-booking/attendance-booking.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-	<app-list-toolbar pageTitle="{{'erp.app.pages.crm.attendance-booking.page-title' | translate}}" [pageConfig]="pageConfig" [ShowFeature]="false" [ShowArchive]="false" [ShowHelp]="false" [selectedItems]="selectedItems" [query]="query" (add)="add()" (refresh)="refresh()" (export)="export()" (import)="import($event)" (help)="help()" (unselect)="unselect()" (archiveItems)="archiveItems()" (deleteItems)="deleteItems()" (changeBranch)="changeBranch($event)">
+	<app-list-toolbar pageTitle="{{'Booking' | translate}}" [pageConfig]="pageConfig" [ShowFeature]="false" [ShowArchive]="false" [ShowHelp]="false" [selectedItems]="selectedItems" [query]="query" (add)="add()" (refresh)="refresh()" (export)="export()" (import)="import($event)" (help)="help()" (unselect)="unselect()" (archiveItems)="archiveItems()" (deleteItems)="deleteItems()" (changeBranch)="changeBranch($event)">
 		<span title>{{numberOfDinnerPax + 'P - '+ numberOfReal+'Đ - '+numberOfKid+'T - '+numberOfForeigner+'N'}}</span>
 	</app-list-toolbar>
 </ion-header>
@@ -13,78 +13,78 @@
 		<header class="bold">
 			<div class="col-checkbox cell"></div>
 			<div class="col-date cell" (click)="sortToggle('PartyDate')">
-				{{'erp.app.pages.crm.attendance-booking.party-date' | translate}}
+				{{'banquet date' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.PartyDate" [name]="sort.PartyDate == 'PartyDate'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.PartyDate" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-remark cell" (click)="sortToggle('CustomerName')">
-				{{'erp.app.pages.crm.attendance-booking.customer-name' | translate}}
+				{{'Customer name' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.CustomerName" [name]="sort.CustomerName == 'CustomerName'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.CustomerName" name="search" color="primary"></ion-icon>
 			</div>
 			
 			<div class="col-code cell phone" (click)="sortToggle('Phone')">
-				{{'erp.app.pages.crm.attendance-booking.phone' | translate}}
+				{{'Telephone' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.Phone" [name]="sort.Phone == 'Phone'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.Phone" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-code cell" (click)="sortToggle('RegisteredTable')">
-				{{'erp.app.pages.crm.attendance-booking.registered-table' | translate}}
+				{{'Table' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.RegisteredTable" [name]="sort.RegisteredTable == 'RegisteredTable'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.RegisteredTable" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-number cell" (click)="sortToggle('DinnerPax')">
-				{{'erp.app.pages.crm.attendance-booking.dinner-pax' | translate}}
+				{{'Dinner/Pax' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.DinnerPax" [name]="sort.DinnerPax == 'DinnerPax'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.DinnerPax" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-number cell" (click)="sortToggle('RealField')">
-				{{'erp.app.pages.crm.attendance-booking.real-field' | translate}}
+				{{'bookings' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.RealField" [name]="sort.RealField == 'RealField'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.RealField" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-number cell" (click)="sortToggle('Kids')">
-				{{'erp.app.pages.crm.attendance-booking.kids' | translate}}
+				{{'Kids' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.Kids" [name]="sort.Kids == 'Kids'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.Kids" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-number cell" (click)="sortToggle('ForeignerNo')">
-				{{'erp.app.pages.crm.attendance-booking.foreigner-no' | translate}}
+				{{'Foreign' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.ForeignerNo" [name]="sort.ForeignerNo == 'ForeignerNo'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.ForeignerNo" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-code cell" (click)="sortToggle('TypeOfParty')">
-				{{'erp.app.pages.crm.attendance-booking.type-of-party' | translate}}
+				{{'Banquet type' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.TypeOfParty" [name]="sort.TypeOfParty == 'TypeOfParty'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.TypeOfParty" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-remark cell">
-				{{'erp.app.pages.crm.attendance-booking.remark' | translate}}
+				{{'Remark' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.CustomerName" [name]="sort.CustomerName == 'CustomerName'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.CustomerName" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-code cell" (click)="sortToggle('DiningCard')">
-				{{'erp.app.pages.crm.attendance-booking.dining-card' | translate}}
+				{{'DiningCard' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.DiningCard" [name]="sort.DiningCard == 'DiningCard'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.DiningCard" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-code cell" (click)="sortToggle('NoRecords')">
-				{{'erp.app.pages.crm.attendance-booking.no-records' | translate}}
+				{{'Count' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.NoRecords" [name]="sort.NoRecords == 'NoRecords'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.NoRecords" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-code cell" (click)="sortToggle('CustomerGroup')">
-				{{'erp.app.pages.crm.attendance-booking.customer-group' | translate}}
+				{{'Group' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.CustomerGroup" [name]="sort.CustomerGroup == 'CustomerGroup'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.CustomerGroup" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-code cell" (click)="sortToggle('CustomerType')">
-				{{'erp.app.pages.crm.attendance-booking.customer-type' | translate}}
+				{{'Customer type' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.CustomerType" [name]="sort.CustomerType == 'CustomerType'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.CustomerType" name="search" color="primary"></ion-icon>
 			</div>
 			<div class="col-status cell" (click)="sortToggle('Status')">
-				{{'erp.app.pages.crm.attendance-booking.status' | translate}}
+				{{'Status' | translate}}
 				<ion-icon class="min-btn" *ngIf="sort.Status" [name]="sort.Status == 'Status'?'arrow-down': 'arrow-up'"></ion-icon>
 				<ion-icon class="min-btn" (click)="pageConfig.isShowSearch = !pageConfig.isShowSearch" *ngIf="query.Status" name="search" color="primary"></ion-icon>
 			</div>
@@ -93,23 +93,23 @@
 			<header class="filter" *ngIf="pageConfig.isShowSearch">
 				<div class="col-checkbox cell empty"></div>
 				<div class="col-date cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.party-date' | translate}}</ion-text>
-					<input placeholder="{{'erp.app.pages.crm.attendance-booking.party-date' | translate}}" [ngModelOptions]="{standalone: true}" (change)="refresh();" [(ngModel)]="query.PartyDate" class="c-input no-check-dirty" [ngClass]="{active: query.PartyDate}" type="date">
+					<ion-text>{{'banquet date' | translate}}</ion-text>
+					<input placeholder="{{'banquet date' | translate}}" [ngModelOptions]="{standalone: true}" (change)="refresh();" [(ngModel)]="query.PartyDate" class="c-input no-check-dirty" [ngClass]="{active: query.PartyDate}" type="date">
 					<ion-icon class="min-btn" (click)="query.PartyDate=''; refresh()" *ngIf="query.PartyDate" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-remark cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.customer-name' | translate}}</ion-text>
-					<input (keydown)="onKeydown($event)" type="search" placeholder="{{'erp.app.pages.crm.attendance-booking.customer-name' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.CustomerName" class="c-input no-check-dirty" [ngClass]="{active: query.CustomerName}" >
+					<ion-text>{{'Customer name' | translate}}</ion-text>
+					<input (keydown)="onKeydown($event)" type="search" placeholder="{{'Customer name' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.CustomerName" class="c-input no-check-dirty" [ngClass]="{active: query.CustomerName}" >
 					<ion-icon class="min-btn" (click)="query.CustomerName=''; refresh()" *ngIf="query.CustomerName" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-code cell phone">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.phone' | translate}}</ion-text>
-					<input (keydown)="onKeydown($event)" placeholder="{{'erp.app.pages.crm.attendance-booking.phone' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.Phone" class="c-input no-check-dirty" [ngClass]="{active: query.Phone}" type="search">
+					<ion-text>{{'Telephone' | translate}}</ion-text>
+					<input (keydown)="onKeydown($event)" placeholder="{{'Telephone' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.Phone" class="c-input no-check-dirty" [ngClass]="{active: query.Phone}" type="search">
 					<ion-icon class="min-btn" (click)="query.Phone=''; refresh()" *ngIf="query.Phone" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-code cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.registered-table' | translate}}</ion-text>
-					<input placeholder="{{'erp.app.pages.crm.attendance-booking.registered-table' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.RegisteredTable" class="c-input no-check-dirty" [ngClass]="{active: query.RegisteredTable}" type="search">
+					<ion-text>{{'Table' | translate}}</ion-text>
+					<input placeholder="{{'Table' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.RegisteredTable" class="c-input no-check-dirty" [ngClass]="{active: query.RegisteredTable}" type="search">
 					<ion-icon class="min-btn" (click)="query.RegisteredTable=''; refresh()" *ngIf="query.RegisteredTable" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-number cell empty"></div>
@@ -118,49 +118,49 @@
 				<div class="col-number cell empty"></div>
 				
 				<div class="col-code cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.type-of-party' | translate}}</ion-text>
+					<ion-text>{{'Banquet type' | translate}}</ion-text>
 					<select (change)="refresh()" class="c-input no-check-dirty c-dropdown" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.TypeOfParty" [ngClass]="{active: query.TypeOfParty}">
-						<option value="">{{'erp.app.pages.crm.attendance-booking.type-of-party' | translate}}</option>
+						<option value="">{{'Banquet type' | translate}}</option>
 						<option *ngFor="let t of PartyMenuList" [value]="t.Code">{{t.Name}}</option>
 					</select>
 					<ion-icon class="min-btn" (click)="query.TypeOfParty=''; refresh()" name="close-circle-outline"></ion-icon>
 				</div>
 				
 				<div class="col-remark cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.remark' | translate}}</ion-text>
-					<input (keydown)="onKeydown($event)" placeholder="{{'erp.app.pages.crm.attendance-booking.remark' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.Remark" class="c-input no-check-dirty" [ngClass]="{active: query.Remark}" type="search">
+					<ion-text>{{'Remark' | translate}}</ion-text>
+					<input (keydown)="onKeydown($event)" placeholder="{{'Remark' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.Remark" class="c-input no-check-dirty" [ngClass]="{active: query.Remark}" type="search">
 					<ion-icon class="min-btn" (click)="query.Remark=''; refresh()" *ngIf="query.Remark" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-code cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.dining-card' | translate}}</ion-text>
-					<input (keydown)="onKeydown($event)" placeholder="{{'erp.app.pages.crm.attendance-booking.dining-card' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.DiningCard" class="c-input no-check-dirty" [ngClass]="{active: query.DiningCard}" type="search">
+					<ion-text>{{'DiningCard' | translate}}</ion-text>
+					<input (keydown)="onKeydown($event)" placeholder="{{'DiningCard' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.DiningCard" class="c-input no-check-dirty" [ngClass]="{active: query.DiningCard}" type="search">
 					<ion-icon class="min-btn" (click)="query.DiningCard=''; refresh()" *ngIf="query.DiningCard" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-code cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.no-records' | translate}}</ion-text>
-					<input (keydown)="onKeydown($event)" placeholder="{{'erp.app.pages.crm.attendance-booking.no-records' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.NoRecords" class="c-input no-check-dirty" [ngClass]="{active: query.NoRecords}" type="search">
+					<ion-text>{{'Count' | translate}}</ion-text>
+					<input (keydown)="onKeydown($event)" placeholder="{{'Count' | translate}}" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.NoRecords" class="c-input no-check-dirty" [ngClass]="{active: query.NoRecords}" type="search">
 					<ion-icon class="min-btn" (click)="query.NoRecords=''; refresh()" *ngIf="query.NoRecords" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-code cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.customer-group' | translate}}</ion-text>
+					<ion-text>{{'Group' | translate}}</ion-text>
 					<select (change)="refresh()" class="c-input no-check-dirty c-dropdown" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.CustomerGroup" [ngClass]="{active: query.CustomerGroup}">
-						<option value="">{{'erp.app.pages.crm.attendance-booking.customer-group' | translate}}</option>
+						<option value="">{{'Group' | translate}}</option>
 						<option *ngFor="let t of AttendanceGroup" [value]="t.Code">{{t.Name}}</option>
 					</select>
 					<ion-icon class="min-btn" (click)="query.CustomerGroup=''; refresh()" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-code cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.customer-type' | translate}}</ion-text>
+					<ion-text>{{'Customer type' | translate}}</ion-text>
 					<select (change)="refresh()" class="c-input no-check-dirty c-dropdown" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.CustomerType" [ngClass]="{active: query.CustomerType}">
-						<option value="">{{'erp.app.pages.crm.attendance-booking.customer-type' | translate}}</option>
+						<option value="">{{'Customer type' | translate}}</option>
 						<option *ngFor="let t of AttendanceType" [value]="t.Code">{{t.Name}}</option>
 					</select>
 					<ion-icon class="min-btn" (click)="query.CustomerType=''; refresh()" name="close-circle-outline"></ion-icon>
 				</div>
 				<div class="col-status cell">
-					<ion-text>{{'erp.app.pages.crm.attendance-booking.status' | translate}}</ion-text>
+					<ion-text>{{'Status' | translate}}</ion-text>
 					<select (change)="refresh()" class="c-input c-dropdown no-check-dirty" [ngModelOptions]="{standalone: true}" [(ngModel)]="query.Status" [ngClass]="{active: query.Status}">
-						<option value="">{{'erp.app.pages.crm.attendance-booking.status' | translate}}</option>
+						<option value="">{{'Status' | translate}}</option>
 						<option *ngFor="let t of statusList" [value]="t.Code">{{t.Name}}</option>
 					</select>
 					<ion-icon class="min-btn" (click)="query.Status=''; refresh()"  name="close-circle-outline"></ion-icon>
